<resources>
    <string name="app_name">SurveyApp</string>
    <string name="name_surname">Name and Surname</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="city">City</string>
    <string name="age">Age</string>
    <string name="color">Favorite color</string>
    <string name="food">Favorite food</string>
    <string name="book">Favorite book</string>
    <string name="save">Save</string>
    <string name="anasayfa">Back to Home Page</string>


</resources>